manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webclient-angular-crud-service
spec:
  selector:
    app: webclient-angular-crud
  ports:
    - protocol: "TCP"
      port: 80
  type: ClusterIP
