manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: Deny";
      more_set_headers "X-Xss-Protection: 1; mode=block";
      more_set_headers "X-Content-Type-Options: nosniff";
  name: webclient-angular-crud-ingress
spec:
  rules:
    - host: demo.angularcrud.com
      http:
        paths:
        - backend:
            service:
              name: webclient-angular-crud-service
              port: 
                number: 80
          path: /
          pathType: ImplementationSpecific
